[package]
name = "rusty-raft"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
tokio = {version= "1.47.1", features = ["full"] }
anyhow = "1.0.99"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
rand = "0.10.0-rc.0"
messages = "0.3.1"